css/main.css
/* ==========================================================================
   Author: Shimul
   url: streetcoder.net
   email: proshimul@yahoo.com
   ========================================================================== */

@font-face {
    font-family: 'GothamCondensed-Bold';
    src: url('../fonts/GothamCondensed-Bold/GothamCondensed-Bold.eot?#iefix') format('embedded-opentype'),  url('../fonts/GothamCondensed-Bold/GothamCondensed-Bold.otf')  format('opentype'),
    url('../fonts/GothamCondensed-Bold/GothamCondensed-Bold.woff') format('woff'), url('../fonts/GothamCondensed-Bold/GothamCondensed-Bold.ttf')  format('truetype'), url('../fonts/GothamCondensed-Bold/GothamCondensed-Bold.svg#GothamCondensed-Bold') format('svg');
    font-weight: normal;
    font-style: normal;
}

@font-face {
    font-family: 'GothamCondensed-Book';
    src: url('../fonts/GothamCondensed-Book/GothamCondensed-Book.eot?#iefix') format('embedded-opentype'),  url('../fonts/GothamCondensed-Book/GothamCondensed-Book.otf')  format('opentype'),
    url('../fonts/GothamCondensed-Book/GothamCondensed-Book.woff') format('woff'), url('../fonts/GothamCondensed-Book/GothamCondensed-Book.ttf')  format('truetype'), url('../fonts/GothamCondensed-Book/GothamCondensed-Book.svg#GothamCondensed-Book') format('svg');
    font-weight: normal;
    font-style: normal;
}


/* Space out content a bit */
body {
    background: #000;
    padding-top: 20px;
    padding-bottom: 20px;
    font-family: "GothamCondensed-Book";
}
h1,h2,h3{
    font-family: "GothamCondensed-Bold";
}
.head-line{
    letter-spacing: 1.5px;
}
h3.head-line{
    margin-bottom: 0px;
    font-size: 28px;
    word-spacing: 2px;
}

h2.head-line{
    margin-top: 0px;
    font-size: 42px;
}

.container{
    background: #000;
    text-align: center;
    color: #FFFFFF;
}
.p-height{
    margin-top: 20px;
    margin-bottom: 20px;
    letter-spacing: 1px;
}
.p-height p{
    line-height: 18px;
    font-size:22px;
}
.offer-text{
    font-size:16px;
    letter-spacing: 1.2px;
    margin-top: 20px;
}
.offer-text p{
    color: #8ab339;
    font-weight: bold;
}

.form-control{
    height: 27px;
    border-radius: 2px;
    font-size: 12px;
    padding: 4px 6px;
    font-size:16px;
}

.checkbox label {
    font-size: 12px;
    letter-spacing: 1.2px;
    padding-left: 6px;
}
.subscribe-btn{
    background: #8ab339;
    border: none;
    padding: 6px 20px;
    font-weight: bold;
    text-transform: uppercase;
    font-size:18px;
    letter-spacing: 1.2px;
}

.success{
    text-transform: uppercase;
    letter-spacing: 1.5px;
    color: #8ab339;
}
h2.success{
    margin-top: 0px;
}

h3.success{
    margin-bottom: 0px;
}


/* Customize container */
@media (min-width: 768px) {
   .container {
      max-width: 400px;
   }
   .form-control{
      width: 60%;
      margin-left: 20%;
   }
}

@media (max-width: 767px) {
    .form-control{
        width: 80%;
        margin-left: 10%;
    }
}

/* Responsive: Portrait tablets and up */
@media screen and (min-width: 768px) {

}

